# multi_agent_planner

./: .gitignore  .tags  .tags_sorted_by_file  CMakeLists.txt  README.md  TODO.md
multi_agent_planner/: CMakeLists.txt  mainpage.dox  manifest.xml
multi_agent_planner/config/: batman_formation.ggb  config.yaml  costmap_2d.yaml  costmap_2d_swarm_inscribed.yaml  full_body_base.mprim  pr2_both_arms.yaml  swarm_config.yaml
multi_agent_planner/include/multi_agent_planner/: CollisionSpaceMgr.h  Constants.h  Environment.h  HashManager.h  LoggerNames.h  OccupancyGridUser.h  ParameterCatalog.h  PathPostProcessor.h  SearchRequest.h  StatsWriter.h  TransitionData.h  Utilities.h  Visualizer.h  swarmViz.h
multi_agent_planner/include/multi_agent_planner/ExperimentFramework/: experimentEnvironment.h  randomStartGoalGenerator.h
multi_agent_planner/include/multi_agent_planner/Heuristics/: 2Dgridsearch.h  AbstractHeuristic.h  ArmAnglesHeuristic.h  BFS2DHeuristic.h  BFS2DRotFootprintHeuristic.h  BFS3DHeuristic.h  BFS3DWithRotationHeuristic.h  BaseWithRotationHeuristic.h  EndEffLocalHeuristic.h  EndEffOnlyRotationHeuristic.h  EndEffectorHeuristic.h  EuclideanHeuristic.h  HeuristicMgr.h  VoronoiOrientationHeuristic.h
multi_agent_planner/include/multi_agent_planner/MotionPrimitives/: ArmTuckMotionPrimitive.h  ArmUntuckMotionPrimitive.h  ChangeLeaderPrimitive.h  MotionPrimitive.h  MotionPrimitivesMgr.h  NavAdaptiveMotionPrimitive.h  NavMotionPrimitive.h  PolicyGenerator.h
multi_agent_planner/include/multi_agent_planner/StateReps/: ContArmState.h  ContBaseState.h  ContRobotState.h  DiscObjectState.h  DiscRobotState.h  GoalRegionState.h  GoalState.h  GraphState.h  RobotState.h  SwarmState.h
multi_agent_planner/src/: CollisionSpaceMgr.cpp  Environment.cpp  HashManager.cpp  OccupancyGridUser.cpp  ParameterCatalog.cpp  PathPostProcessor.cpp  SearchRequest.cpp  StatsWriter.cpp  TransitionData.cpp  Visualizer.cpp  swarmViz.cpp
multi_agent_planner/src/ExperimentFramework/: randomStartGoalGenerator.cpp
multi_agent_planner/src/Heuristics/: 2Dgridsearch.cpp  AbstractHeuristic.cpp  ArmAnglesHeuristic.cpp  BFS2DHeuristic.cpp  BFS2DRotFootprintHeuristic.cpp  BFS3DHeuristic.cpp  BFS3DWithRotationHeuristic.cpp  BaseWithRotationHeuristic.cpp  EndEffLocalHeuristic.cpp  EndEffOnlyRotationHeuristic.cpp  EndEffectorHeuristic.cpp  EuclideanHeuristic.cpp  HeuristicMgr.cpp  VoronoiOrientationHeuristic.cpp
multi_agent_planner/src/MotionPrimitives/: ArmAdaptiveMotionPrimitive.cpp  ArmMotionPrimitive.cpp  ArmTuckMotionPrimitive.cpp  ArmUntuckMotionPrimitive.cpp  BaseAdaptiveMotionPrimitive.cpp  MotionPrimitive.cpp  MotionPrimitivesMgr.cpp  NavAdaptiveMotionPrimitive.cpp  NavMotionPrimitive.cpp  PolicyGenerator.cpp
multi_agent_planner/src/StateReps/: ContArmState.cpp  ContBaseState.cpp  ContRobotState.cpp  DiscObjectState.cpp  DiscRobotState.cpp  GoalRegionState.cpp  GoalState.cpp  GraphState.cpp  RobotState.cpp  SwarmState.cpp
multi_agent_planner_node/: CMakeLists.txt  mainpage.dox  manifest.xml
multi_agent_planner_node/config/: logging_levels.yaml
multi_agent_planner_node/experiments/: env_2.yaml  env_5.yaml  env_6.yaml  move_to_number.sh  swarm_tests_1.yaml  swarm_tests_3.yaml  swarm_tests_4.yaml  swarm_tests_5.yaml  swarm_tests_7.yaml  swarm_tests_9.yaml
multi_agent_planner_node/experiments/experiments.bk.0/: env.yaml  env_1.yaml  env_3.yaml  env_4.yaml  env_6.yaml  swarm_tests.yaml  swarm_tests_2.yaml  swarm_tests_6.yaml
multi_agent_planner_node/experiments/experiments_easy/: env_0.yaml  env_1.yaml  env_2.yaml  env_3.yaml  env_4.yaml  env_7.yaml  env_8.yaml  env_9.yaml  swarm_tests_0.yaml  swarm_tests_1.yaml  swarm_tests_2.yaml  swarm_tests_3.yaml  swarm_tests_4.yaml  swarm_tests_6.yaml  swarm_tests_8.yaml
multi_agent_planner_node/experiments/large_set/: env_0.yaml  env_1.yaml  env_2.yaml  env_3.yaml  env_4.yaml  env_5.yaml  env_6.yaml  env_7.yaml  env_8.yaml  env_9.yaml  swarm_tests_0.yaml  swarm_tests_1.yaml  swarm_tests_2.yaml  swarm_tests_3.yaml  swarm_tests_4.yaml  swarm_tests_5.yaml  swarm_tests_6.yaml  swarm_tests_7.yaml  swarm_tests_8.yaml  swarm_tests_9.yaml
multi_agent_planner_node/experiments/stats/: compute_stats.py
multi_agent_planner_node/include/multi_agent_planner_node/: node.h  (+4 more)
multi_agent_planner_node/launch/: generate_experiments.launch  launch_node.launch  launch_node_btfile_debugger.launch  launch_node_debugger.launch  launch_node_demo.launch  run_experiments.launch
multi_agent_planner_node/maps/: corridors.bt
multi_agent_planner_node/src/: CollisionSpaceInterface.cpp  EnvInterfaces.cpp  NavMapHandler.cpp  generateExperimentsNode.cpp  node.cpp  publishSTLToOctomap.cpp  run_tests.cpp  testPlanningRequest.cpp
multi_agent_planner_node/srv/: GetSwarmPlan.srv
(+7 files in other folders)
